--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Home.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Home.Master
@@ -26,7 +26,7 @@
                                                     <tr>
                                                         <td style="width: 10%">&nbsp;<img src="../../Themes/Images/logoKraus.png" /></td>
                                                         <td style="vertical-align: bottom;">
-                                                            <h1 style="color: #0099FF; font-weight: 100; font-family: Arial; text-align: left;"><span>Warehouse Command Center</span></h1>
+                                                            <h1 style="color: whitesmoke; font-weight: 500; font-family: Arial; text-align: left; vertical-align:bottom; margin:0;"><span>Warehouse Command Center</span></h1>
                                                         </td>
                                                         <td></td>
                                                     </tr>
