--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
@@ -14,7 +14,7 @@
     <link rel="icon"  href="../../PackingIcon.ico" />
 </head>
 <body>
-    <table id="tblMain" runat="server" style="width: 100%; background-image: url(../../Themes/Images/main-bg.jpg)" >
+    <table id="tblMain" runat="server" style="width: 100%; height:100%; background-image: url(../../Themes/Images/main-bg.jpg)" >
         <tr style="vertical-align: top">
             <td>
                 <div style="border-bottom-style: double; border-bottom-width: medium; border-bottom-color: #0099FF; background: rgba(0, 0, 0, 0.70)">
@@ -50,7 +50,7 @@
         </tr>
         <tr id="trBody" style="width: 100%; margin-top: 15px; float: none;">
             <td>
-                <div id="page" class="container1" style="width: 100%">
+                <div id="page" class="container1" style="width: 100%;height:1000px">
                     <form id="form1" runat="server">
                         <div style="border-style: none groove none none; border-width: medium; border-color: #0099CC; float: left; vertical-align: top; width: 14%">
                             <asp:TreeView ID="tvMenu" runat="server" ImageSet="Arrows" OnSelectedNodeChanged="TreeView1_SelectedNodeChanged1" LineImagesFolder="~/TreeLineImages" ShowLines="True" >
