--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
@@ -65,7 +65,7 @@
                                         <asp:TreeNode Text="Stations Detail" Value="~/Forms/Web Forms/frmStations.aspx" />
                                     </asp:TreeNode>
                                     <asp:TreeNode Text="Return (RMA)" SelectAction="SelectExpand">
-                                        <asp:TreeNode Text="Return Details" Value="~/Forms/Web Forms/frmRetunDetail.aspx" />
+                                        <asp:TreeNode Text="Return Details" Value="~/Forms/Web Forms/DemoGrid.aspx" />
                                          <asp:TreeNode Text="New RMA" Value="~/Forms/Web Forms/frmRMAEnter.aspx" />
                                         <asp:TreeNode Text="Configuration" Value="~/Forms/Web Forms/frmRMAConfig.aspx" />
                                     </asp:TreeNode>
