--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
@@ -14,14 +14,14 @@
     <link rel="icon"  href="../../PackingIcon.ico" />
 </head>
 <body>
-    <table id="tblMain" runat="server" style="width: 100%; height:100%; background-image: url(../../Themes/Images/main-bg.jpg)" >
+    <table id="tblMain" runat="server" style="width: 100%; height:100%; background-image: url(../../Themes/Images/water9.jpg)" >
         <tr style="vertical-align: top">
             <td>
-                <div style="border-bottom-style: double; border-bottom-width: medium; border-bottom-color: #0099FF; background: rgba(0, 0, 0, 0.70)">
+                <div style="border-bottom-style: double; border-bottom-width: medium; background: #4D8ED1">
                     <table id="tblMainHome" runat="server" style="width: 99%">
                         <tr>
                             <td style="width: 10%">
-                                <img src="../../Themes/Images/logoKraus.png" onclick="location.href='frmHomePage.aspx'"/></td>
+                                <img src="../../Themes/Images/k.png" onclick="location.href='frmHomePage.aspx'"/></td>
                             <td style="vertical-align: bottom;">
                                 <h1 style="color: whitesmoke; font-weight: 500; font-family: Arial; text-align: left; vertical-align:bottom; margin:0;"><span>Warehouse Command Center</span></h1>
                             </td>
