--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Home.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Home.Master
@@ -11,20 +11,20 @@
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <table id="tblMain" runat="server" style="width: 100%; background-image: url(../../Themes/Images/main-bg.jpg)">
+    <table id="tblMain" runat="server" style="width: 100%; background-image: url(../../Themes/Images/water9.jpg)">
         <tr>
             <td style="vertical-align: top">
                 <div>
                     <table id="tblMainHome" runat="server" style="width: 100%">
                         <tr>
                             <td >
-                                <div style="border-bottom-style: double; border-bottom-width: medium; border-bottom-color: #0099FF" >
+                                <div style="border-bottom-style: double; border-bottom-width: medium; border-bottom-color: #4D8ED1" >
                                     <table style="width: 100%">
-                                        <tr style="height: 50px; background: rgba(0, 0, 0, 0.70);">
+                                        <tr style="height: 50px; background: #4D8ED1">
                                             <td>
                                                 <table style="width: 100%; margin: 0px auto;">
                                                     <tr>
-                                                        <td style="width: 10%">&nbsp;<img src="../../Themes/Images/logoKraus.png" /></td>
+                                                        <td style="width: 10%">&nbsp;<img src="../../Themes/Images/k.png" /></td>
                                                         <td style="vertical-align: bottom;">
                                                             <h1 style="color: whitesmoke; font-weight: 500; font-family: Arial; text-align: left; vertical-align:bottom; margin:0;"><span>Warehouse Command Center</span></h1>
                                                         </td>
