--- a/ShippingController(V1.0)/ShippingController(V1.0)/Themes/CSS/BlackCoffeeCSS.css
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Themes/CSS/BlackCoffeeCSS.css
@@ -4,7 +4,7 @@
     background: url(Themes/Images/main-bg.jpg) repeat;
     font-family: Arial;
     font-size: 10pt;
-    color: #B0B0B0;
+    color: whitesmoke;
 }
 /** HEADER */
 
@@ -110,7 +110,7 @@
 	overflow: hidden;
 	margin: 20px auto 0px auto;
 	padding: 20px 0px;
-	background: rgba(0,0,0,0.70);
+	background:  #4D8ED1;
 }
 
 #footer p {
@@ -132,7 +132,7 @@ ul.style1 li {
 	clear: both;
 	margin-bottom: 25px;
 	padding: 30px 0px 40px 0px;
-	border-top: 1px solid #000000;
+	border-top: 1px solid  #4D8ED1;
 	box-shadow: inset 0 1px 0 rgba(255,255,255,.10);
 }
 
@@ -225,10 +225,10 @@ ul.style3 .first .date
 /*Form Title Strip*/
 .TitleStrip {
     margin:0px;
-    background:rgba(0,0,0,0.80);
+    background: #4D8ED1;
     width:100%;
     text-align:left;
-    color:#1199d5;
+    color:whitesmoke;
      /*color:#cfa917;*/
     font-family:Arial;
     height:25px;
@@ -283,8 +283,8 @@ ul.style3 .first .date
 border-color:#1199d5;
 border-width:thin;
 border-style:groove;
-background-color:#222121;
-color:#1199d5;
+background-color:#4D8ED1;
+color:whitesmoke;
 font-family:Arial;
 width:120px;
 height:32px;
@@ -292,11 +292,11 @@ font-weight:700;
 font-size:14px;
 }
     .btn:hover {
-        background-color: #71c315;
-        border-color: #71c315;
+        background-color: #4D8ED1;
+        border-color: #4D8ED1;
         border-width: thin;
         border-style: groove;
-        color: black;
+        color:whitesmoke;
     }
 
 
@@ -387,7 +387,7 @@ font-size:14px;
     font-family: Arial;
     Font-Size: 16px;
     font-weight: bold;
-    Color: #B0B0B0;
+    Color: #4D8ED1;
 }
      .nodeStyleKey:hover {
         font-family: Arial;
