--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Home.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Home.Master
@@ -11,7 +11,7 @@
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <table id="tblMain" runat="server" style="width: 100%; background-image: url(../../Themes/Images/water9.jpg)">
+    <table id="tblMain" runat="server" style="width: 100%; ">
         <tr>
             <td style="vertical-align: top">
                 <div>
